Fixed not working retrieving correct OAuth timestamp